cluster/manifests/snapshot-diff-server/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: snapshot-diff-server
  labels:
    name: snapshot-diff-server
    pod-security.kubernetes.io/enforce: restricted
