cluster/manifests/snapshot-diff-server/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: snapshot-diff-server
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: snapshot-diff-server
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
