cluster/manifests/snapshot-diff-server/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: snapshot-diff-server
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - snapshot-diff-server.minikube.127.0.0.1.nip.io
        - snapshot-diff-server.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
