cluster/manifests/snapshot-diff-server/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: snapshot-diff-server
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: snapshot-diff-server
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - pyroscope/pyroscope-distributor.pyroscope.svc.cluster.local
